<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dcc196.trabalho_dcc.MainActivity">

    <Button
        android:id="@+id/btnCadastrarParticipante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar_participante"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="72dp" />

    <Button
        android:id="@+id/btnCadastrarReserva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar_reserva"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnCadastrarLivro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/cadastrar_livros"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toRightOf="@+id/btnCadastrarReserva"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <ListView
        android:id="@+id/lvParticipantes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnCadastrarParticipante" />

</android.support.constraint.ConstraintLayout>
